--- a/index.html
+++ b/index.html
@@ -1,1 +1,343 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DUModZ Admin Control Panel</title>
+    
+    <!-- Tailwind CSS & Google Fonts -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Firebase SDKs -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getDatabase, ref, onValue, set, update, remove } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+        import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+        // --- আপনার FIREBASE কনফিগারেশন এখানে বসান ---
+        const firebaseConfig = {
+            apiKey: "AIzaSyC_DtbizYw47RMwx6QG-CSTPdpEgmIQ7wM",
+  authDomain: "sha257-varify-dumodz.firebaseapp.com",
+  databaseURL: "https://sha257-varify-dumodz-default-rtdb.firebaseio.com",
+  projectId: "sha257-varify-dumodz",
+  storageBucket: "sha257-varify-dumodz.firebasestorage.app",
+  messagingSenderId: "411803659932",
+  appId: "1:411803659932:web:fece07d6b9cd346f330759",
+  measurementId: "G-YQSN090BBT"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+        const auth = getAuth(app);
+
+        // Global Variables
+        let currentData = null;
+
+        // UI Selectors
+        const loginPage = document.getElementById('login-page');
+        const dashboard = document.getElementById('dashboard');
+        const appCardsContainer = document.getElementById('app-cards-container');
+        const body = document.body;
+
+        // 1. Auth Logic
+        window.login = async () => {
+            const email = document.getElementById('email').value;
+            const pass = document.getElementById('password').value;
+            try {
+                await signInWithEmailAndPassword(auth, email, pass);
+                Swal.fire('Success', 'Welcome Admin!', 'success');
+            } catch (error) {
+                Swal.fire('Error', error.message, 'error');
+            }
+        };
+
+        window.logout = () => {
+            signOut(auth);
+            location.reload();
+        };
+
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                loginPage.classList.add('hidden');
+                dashboard.classList.remove('hidden');
+                loadData();
+            } else {
+                loginPage.classList.remove('hidden');
+                dashboard.classList.add('hidden');
+            }
+        });
+
+        // 2. Load Data
+        function loadData() {
+            const dbRef = ref(db, '/');
+            onValue(dbRef, (snapshot) => {
+                const data = snapshot.val();
+                currentData = data;
+                renderDashboard(data);
+            });
+        }
+
+        function renderDashboard(data) {
+            document.getElementById('admin-label-text').innerText = data.admin_label || "No Label";
+            document.getElementById('global-blocklist').value = data.global_blocklist || "";
+            document.getElementById('contact-url').value = data.contact_url || "";
+            document.getElementById('admin-title-input').value = data.admin_label || "";
+
+            appCardsContainer.innerHTML = '';
+            if(data.authorized_apps) {
+                data.authorized_apps.forEach((app, index) => {
+                    const card = `
+                        <div class="card-neu p-5 rounded-3xl mb-6 animate-slide-in">
+                            <div class="flex justify-between items-start mb-4">
+                                <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white shadow-lg">
+                                    <i class="fas fa-mobile-alt"></i>
+                                </div>
+                                <div class="flex gap-2">
+                                    <button onclick="editApp(${index})" class="text-blue-500 p-2 rounded-xl bg-slate-100 hover:bg-blue-100"><i class="fas fa-edit"></i></button>
+                                    <button onclick="deleteApp(${index})" class="text-red-500 p-2 rounded-xl bg-slate-100 hover:bg-red-100"><i class="fas fa-trash"></i></button>
+                                </div>
+                            </div>
+                            <h3 class="font-bold text-lg mb-1">${app.note}</h3>
+                            <p class="text-xs text-gray-500 mb-3 break-all"><b>Package:</b> ${app.package_name}</p>
+                            <div class="bg-gray-50 p-3 rounded-2xl text-[10px] font-mono break-all border border-gray-100 mb-3">
+                                <span class="text-blue-600">SHA256:</span> ${app.sha256_key}
+                            </div>
+                            <p class="text-[10px] text-red-400"><b>Blocklist:</b> ${app.package_blocklist}</p>
+                        </div>
+                    `;
+                    appCardsContainer.innerHTML += card;
+                });
+            }
+        }
+
+        // 3. CRUD Operations
+        window.updateGlobalSettings = () => {
+            const label = document.getElementById('admin-title-input').value;
+            const url = document.getElementById('contact-url').value;
+            const block = document.getElementById('global-blocklist').value;
+            
+            update(ref(db, '/'), {
+                admin_label: label,
+                contact_url: url,
+                global_blocklist: block
+            }).then(() => Swal.fire('Updated!', 'Settings Saved', 'success'));
+        };
+
+        window.addNewApp = async () => {
+            const { value: formValues } = await Swal.fire({
+                title: 'Add New App',
+                html:
+                    '<input id="swal-note" class="swal2-input" placeholder="User Note">' +
+                    '<input id="swal-pkg" class="swal2-input" placeholder="Package Name">' +
+                    '<input id="swal-sha" class="swal2-input" placeholder="SHA256 Key">' +
+                    '<input id="swal-block" class="swal2-input" placeholder="Blocklist (comma separated)">',
+                focusConfirm: false,
+                preConfirm: () => {
+                    return {
+                        note: document.getElementById('swal-note').value,
+                        package_name: document.getElementById('swal-pkg').value,
+                        sha256_key: document.getElementById('swal-sha').value,
+                        package_blocklist: document.getElementById('swal-block').value
+                    }
+                }
+            });
+
+            if (formValues) {
+                const apps = currentData.authorized_apps || [];
+                apps.push(formValues);
+                update(ref(db, '/'), { authorized_apps: apps });
+            }
+        };
+
+        window.editApp = async (index) => {
+            const app = currentData.authorized_apps[index];
+            const { value: formValues } = await Swal.fire({
+                title: 'Edit App',
+                html:
+                    `<input id="swal-note" class="swal2-input" value="${app.note}" placeholder="User Note">` +
+                    `<input id="swal-pkg" class="swal2-input" value="${app.package_name}" placeholder="Package Name">` +
+                    `<input id="swal-sha" class="swal2-input" value="${app.sha256_key}" placeholder="SHA256 Key">` +
+                    `<input id="swal-block" class="swal2-input" value="${app.package_blocklist}" placeholder="Blocklist">`,
+                focusConfirm: false,
+                preConfirm: () => {
+                    return {
+                        note: document.getElementById('swal-note').value,
+                        package_name: document.getElementById('swal-pkg').value,
+                        sha256_key: document.getElementById('swal-sha').value,
+                        package_blocklist: document.getElementById('swal-block').value
+                    }
+                }
+            });
+
+            if (formValues) {
+                const apps = [...currentData.authorized_apps];
+                apps[index] = formValues;
+                update(ref(db, '/'), { authorized_apps: apps });
+            }
+        };
+
+        window.deleteApp = (index) => {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You won't be able to revert this!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    const apps = currentData.authorized_apps.filter((_, i) => i !== index);
+                    update(ref(db, '/'), { authorized_apps: apps });
+                }
+            });
+        };
+
+        // Theme Toggle
+        window.toggleTheme = () => {
+            body.classList.toggle('dark-mode');
+        };
+
+    </script>
+
+    <style>
+        :root {
+            --bg: #e0e5ec;
+            --shadow-light: #ffffff;
+            --shadow-dark: #a3b1c6;
+            --text: #444;
+        }
+
+        .dark-mode {
+            --bg: #1a202c;
+            --shadow-light: #2d3748;
+            --shadow-dark: #0f172a;
+            --text: #f7fafc;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: var(--bg);
+            color: var(--text);
+            transition: all 0.4s ease;
+        }
+
+        .card-neu {
+            background: var(--bg);
+            box-shadow: 9px 9px 16px var(--shadow-dark), -9px -9px 16px var(--shadow-light);
+            border: 1px solid rgba(255,255,255,0.1);
+        }
+
+        .input-neu {
+            background: var(--bg);
+            box-shadow: inset 5px 5px 10px var(--shadow-dark), inset -5px -5px 10px var(--shadow-light);
+            border: none;
+            outline: none;
+        }
+
+        .btn-neu {
+            background: var(--bg);
+            box-shadow: 5px 5px 10px var(--shadow-dark), -5px -5px 10px var(--shadow-light);
+            transition: 0.2s;
+        }
+
+        .btn-neu:active {
+            box-shadow: inset 3px 3px 7px var(--shadow-dark), inset -3px -3px 7px var(--shadow-light);
+        }
+
+        @keyframes slideIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .animate-slide-in {
+            animation: slideIn 0.5s ease forwards;
+        }
+
+        /* Responsive UI Optimization */
+        @media (max-width: 768px) {
+            .container { padding: 15px; }
+            .grid { grid-template-columns: 1fr; }
+        }
+    </style>
+</head>
+<body class="min-h-screen">
+
+    <!-- LOGIN PAGE -->
+    <div id="login-page" class="flex items-center justify-center min-h-screen p-4">
+        <div class="card-neu p-8 rounded-[40px] w-full max-w-sm text-center">
+            <div class="mb-6">
+                <div class="w-20 h-20 bg-blue-500 rounded-3xl mx-auto flex items-center justify-center text-white text-3xl shadow-xl">
+                    <i class="fas fa-user-shield"></i>
+                </div>
+            </div>
+            <h2 class="text-2xl font-bold mb-6">Admin Login</h2>
+            <input type="email" id="email" placeholder="Admin Email" class="input-neu w-full p-4 rounded-2xl mb-4">
+            <input type="password" id="password" placeholder="Password" class="input-neu w-full p-4 rounded-2xl mb-6">
+            <button onclick="login()" class="btn-neu w-full py-4 rounded-2xl font-bold text-blue-600">Login</button>
+        </div>
+    </div>
+
+    <!-- DASHBOARD -->
+    <div id="dashboard" class="hidden pb-20">
+        <!-- Header -->
+        <header class="p-6 flex justify-between items-center sticky top-0 z-10 bg-opacity-80 backdrop-blur-md">
+            <div>
+                <p class="text-xs opacity-60">Welcome back,</p>
+                <h1 id="admin-label-text" class="text-xl font-bold">DUModZ Admin</h1>
+            </div>
+            <div class="flex gap-3">
+                <button onclick="toggleTheme()" class="btn-neu w-10 h-10 rounded-full"><i class="fas fa-moon"></i></button>
+                <button onclick="logout()" class="btn-neu w-10 h-10 rounded-full text-red-500"><i class="fas fa-sign-out-alt"></i></button>
+            </div>
+        </header>
+
+        <div class="container mx-auto px-4 max-w-[768px]">
+            <!-- Global Settings Section -->
+            <div class="card-neu p-6 rounded-[35px] mb-8">
+                <h2 class="font-bold mb-4 flex items-center gap-2"><i class="fas fa-cogs"></i> Global Settings</h2>
+                <div class="space-y-4">
+                    <div>
+                        <label class="text-[10px] ml-2 opacity-50 uppercase font-bold">Admin Label</label>
+                        <input type="text" id="admin-title-input" class="input-neu w-full p-3 rounded-xl mt-1">
+                    </div>
+                    <div>
+                        <label class="text-[10px] ml-2 opacity-50 uppercase font-bold">Contact URL</label>
+                        <input type="text" id="contact-url" class="input-neu w-full p-3 rounded-xl mt-1">
+                    </div>
+                    <div>
+                        <label class="text-[10px] ml-2 opacity-50 uppercase font-bold">Global Blocklist</label>
+                        <textarea id="global-blocklist" class="input-neu w-full p-3 rounded-xl mt-1 h-20"></textarea>
+                    </div>
+                    <button onclick="updateGlobalSettings()" class="btn-neu w-full py-3 rounded-xl font-bold text-green-600">Update Global Info</button>
+                </div>
+            </div>
+
+            <!-- Apps Section Header -->
+            <div class="flex justify-between items-center mb-6 px-2">
+                <h2 class="text-xl font-bold">Authorized Apps</h2>
+                <button onclick="addNewApp()" class="btn-neu px-4 py-2 rounded-xl text-blue-600 font-bold text-sm">
+                    <i class="fas fa-plus mr-1"></i> Add App
+                </button>
+            </div>
+
+            <!-- Apps Cards Container -->
+            <div id="app-cards-container">
+                <!-- Data will be loaded here -->
+            </div>
+        </div>
+
+        <!-- Footer Navigation (Mobile Style) -->
+        <div class="fixed bottom-6 left-1/2 -translate-x-1/2 w-[90%] max-w-[400px]">
+            <div class="card-neu rounded-full p-2 flex justify-around items-center">
+                <button class="w-12 h-12 rounded-full text-blue-500 flex items-center justify-center"><i class="fas fa-home"></i></button>
+                <button onclick="addNewApp()" class="w-14 h-14 bg-blue-600 text-white rounded-full shadow-lg flex items-center justify-center -translate-y-4"><i class="fas fa-plus"></i></button>
+                <button onclick="updateGlobalSettings()" class="w-12 h-12 rounded-full text-gray-500 flex items-center justify-center"><i class="fas fa-save"></i></button>
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
